content/nomad/v1.11.x/content/docs/job-declare/service-discovery.mdx
---
layout: docs
page_title: Service Discovery
description: |-
  Nomad service discovery helps you automatically connect workloads. Compare Nomad's built-in service discovery feature to Consul service discovery. Learn about health checks, configuring tags in job specification service blocks, and how to specify tags for canary and blue/green allocations.
# START AUTO GENERATED METADATA, DO NOT EDIT
created_at: 2026-03-09T12:02:15-05:00
last_modified: 2026-03-17T17:46:23.000Z
# END AUTO GENERATED METADATA
---

# Configure service discovery

You have two options for service discovery:

- Consul service discovery, which requires access to a Consul cluster. Consul is
  the default option for service discovery.
- Nomad service discovery, which requires no additional infrastructure.

Refer to the [Service discovery in Nomad
documentation](/nomad/docs/networking/service-discovery) for a comparison of
Nomad and Consul service discovery options.

## Workflow

Follow these steps to configure service discovery in your Nomad job
specification (jobspec):

1. Declare the service discovery provider in the `service` block's [`provider`
parameter][service-provider].
1. Optionally configure health checks in the `service` block's [`check` block][service-check].
1. Configure access to other services.

This guide uses sections from an example jobspec that deploys the Countdash
application. The application has a frontend `countdash-web` service that
communicates with a backend `countdash-api` service.

## Declare the service provider

<Tabs>
<Tab heading="Consul" group="consul">

Consul is the default service provider, so you do not have to configure the
`service` block's [`provider` parameter][service-provider]. This jobspec example
explicitly declares `provider = "consul"`.

Additionally, if your job uses the Docker task driver, you need to configure the
host's Docker bridge IP for DNS address in the `network` block. This allows
Nomad allocations to resolve Consul DNS service names.

Configuring Docker is part of Consul installation. For a
detailed explanation, refer to [Consul's "Configuring systemd-resolved for
Docker" section](/consul/docs/manage/dns/forwarding/enable#configuring-systemd-resolved-for-docker).


<CodeBlockConfig lineNumbers="true"
                 filename="countdash.nomad.hcl" 
                 highlight="4,9-11">

```hcl
job "countdash" {
  group "countdash-api" {
    service {
      provider = "consul"
    }

    network {
      ...
      dns {
        servers = ["172.17.0.1"] 
      }
    }

    task {
      driver = "docker"
      ...
    }
  }
}
```

</CodeBlockConfig>

</Tab>
<Tab heading="Nomad" group="nomad">

Because Consul is the default service provider, you must configure the `service`
block's [`provider` parameter][service-provider] to use Nomad service discovery.  

<CodeBlockConfig lineNumbers="true" highlight="4" filename="countdash.nomad.hcl">

```hcl
job "countdash" {
  group "countdash-api" {
    service {
      provider = "nomad"
    }
  }
}
```

</CodeBlockConfig>

</Tab>
</Tabs>

## Configure health checks

Optionally, define health checks with the [`check` block][service-check] to make
sure that the service catalog only returns healthy instances. Health check
configuration is the same whether you use Consul service discovery or Nomad
service discovery.

<Tabs>
<Tab heading="Consul" group="consul">

@include 'job/service-discovery-check.mdx'

</Tab>
<Tab heading="Nomad" group="nomad">

@include 'job/service-discovery-check.mdx'

</Tab>
</Tabs>

## Configure access to other services

<Tabs>
<Tab heading="Consul" group="consul">

If you are using Consul for service discovery and have not enabled service mesh
features, use [Consul DNS](/consul/docs/discover) to discover services and nodes
in the Consul catalog. Refer to Consul's ["Standard lookups"
guide][consul-standard-lookup] for more
information. Do not use the client node addresses from Nomad for upstream
service resolution.

To find a service in the Consul service catalog, use the following format:

```text
<service_name>.service.<consul_datacenter>.<consul_domain>
```

Consul's default datacenter is `dc1` and default domain is `consul`. Those
values are configurable, so verify datacenter and domain with your Consul admin. 

The `countdash-web` service needs to communicate with its backend
`countdash-api` service. The `COUNTING_SERVICE_URL` variable is populated with
the service's Consul service catalog value.

<CodeBlockConfig lineNumbers="true" 
                 filename="countdash.nomad.hcl"
                 highlight="6" >

```hcl
job "countdash" {
  group "countdash-web" {
    task "countdash-web" {
      ...
      env {
        COUNTING_SERVICE_URL = "http://countdash-api.service.dc1.consul:${var.countdash-api-port}"
        PORT="${var.countdash-web-port}"
      }
  }
}
```

</CodeBlockConfig>

</Tab>
<Tab heading="Nomad" group="nomad">

Use [`template` blocks](/nomad/docs/job-specification/template#nomad-services)
blocks with the Consul Template [`nomadService`
function](/consul/docs/reference/consul-template/go#service) to locate services
in the Nomad service discovery catalog. You may use the template as a
configuration file or have its content loaded as environment variables to
configure connection information in applications.

The `countdash-web` service needs to communicate with its backend
`countdash-api` service. The template block code searches for
`countdash-api` and assigns the result to the `COUNTING_SERVICE_URL` variable.

<CodeBlockConfig lineNumbers="true" 
                 filename="countdash.nomad.hcl"
                 highlight="4-13" >

```hcl
job "countdash" {
  group "countdash-web" {
    task "countdash-web" {
      template {
        data = <<EOH
        BIND_ADDRESS = ":${var.countdash-api-port}"
{{ range nomadService "countdash-api" }}
COUNTING_SERVICE_URL = "http://{{ .Address }}:{{ .Port }}"
{{ end }}
EOH
        destination = "local/env.txt"
        env         = true
      }
    }
  }
}
```

</CodeBlockConfig>

</Tab>
</Tabs>


## Find services in the service catalog

<Tabs>
<Tab heading="Consul" group="Consul">

<Tabs>
<Tab heading="CLI" group="consul-cli">

Use the [`consul catalog services` command](/consul/commands/catalog/services) to list services in the Consul catalog.

```shell-script
$ consul catalog services

consul
countdash-api
countdash-web
nomad
nomad-client
```

</Tab>
<Tab heading="API" group="consul-api">

Use the [`v1/catalog/services` API
endpoint](/consul/api-docs/catalog#list-services) to list services in the Consul
catalog.

Replace these placeholders:

- `<consul-http-address>:<port>`: Consul's public IP address and port, such as
  `http://13.58.60.124`
- `<consul-management-token>`: The value of your Consul token, which has
  appropriate privileges to query the Consul catalog. Refer to Consul's [HTTP API Structure guide](/consul/api-docs/api-structure) for token details.

```shell-script
curl --location 'http://<consul-http-address>:<port>/v1/catalog/services' \>
     --header 'X-Consul-Token: <consul-management-token>' 
```

Response is similar to the following:

```json
{
  "consul": [],
  "countdash-api": [],
  "countdash-web": [],
  "nomad": [],
  "nomad-client": []
}
```

</Tab>
</Tabs>

</Tab>
<Tab heading="Nomad" group="nomad">

<Tabs>
<Tab heading="CLI" group="nomad-cli">

Use the [`nomad service list` command](/nomad/commands/service/list) to fetch a list of services.

```shell-script
$ nomad service list
Service Name   Tags
countdash-api  []
countdash-web  []
```

</Tab>
<Tab heading="API" group="nomad-api">

Use the [`v1/services` API
endpoint](/nomad/api-docs/services#list-services) to list services.

Replace these placeholders:

- `<nomad-http-address>:<port>`: Nomad's public IP address and port, such as
  `http://13.58.60.124`
- `<nomad-management-token>`: The value of your Nomad token, which has
  appropriate privileges to query for Nomad services.

```shell-script
curl --location 'http://<nomad-http-address>:<port>/v1/services' \>
     --header 'X-Consul-Token: <nomad-management-token>' 
```

Response is similar to the following:

```json
[
  {
    "Namespace": "default",
    "Services": [
      {
        "ServiceName": "countdash-api"
      },
      {
        "ServiceName": "countdash-web"
      }
    ]
  }
]
```

</Tab>
</Tabs>

</Tab>
</Tabs>

## Find your deployed service's public IP address

<Tabs>
<Tab heading="Consul" group="consul">

Use the Consul [`v1/catalog/service/:service_name>` API endpoint](/consul/api-docs/catalog#list-nodes-for-service) to find the public IP
address of your running service. This example finds the `countdash-web`
service's public IP address.

Replace these placeholders:

- `<consul-http-address>:<port>`: Consul's public IP address and port, such as
  `http://13.58.60.124`
- `<consul-management-token>`: The value of your Consul token, which has
  appropriate privileges to query the Consul catalog. Refer to Consul's [HTTP API Structure guide](/consul/api-docs/api-structure) for token details.

```shell-script
curl --location 'http://<consul-http-address>:<port>/v1/catalog/service/countdash-web?passing' \>
     --header 'X-Consul-Token: <consul-management-token>'  | \
     jq -r '.[] | "\(.ServiceAddress):\(.ServicePort)"'
```

Output returns the public IPv4 address, which in this example is an AWS EC2
public IP and port.

```shell-script
ec2-3-145-209-63.us-east-2.compute.amazonaws.com:9002
```

</Tab>
<Tab heading="Nomad" group="nomad">

<Tabs>
<Tab heading="CLI" group="nomad-cli">

Use the [`nomad service info` command](/nomad/commands/service/info) to fetch
details for a specific service. This example retrieves information about the
`countdash-web` service and formats the output as JSON. Note that the `Address`
value is the public IPv4 address.

```shell-script
$ nomad service info -json countdash-web
[
    {
        "Address": "ec2-3-21-113-32.us-east-2.compute.amazonaws.com",
        "AllocID": "b1d44744-1592-4241-e904-6a4654a40898",
        "CreateIndex": 849,
        "Datacenter": "dc1",
        "ID": "_nomad-task-b1d44744-1592-4241-e904-6a4654a40898-group-countdash-web-countdash-web-countdash-web",
        "JobID": "countdash",
        "ModifyIndex": 849,
        "Namespace": "default",
        "NodeID": "b348d8ac-1020-1b9a-fbb8-0d4a9dbeb5ca",
        "Port": 9002,
        "ServiceName": "countdash-web",
        "Tags": []
    }
]
```

</Tab>
<Tab heading="API" group="nomad-api">

Use the [`/v1/service/:service_name` API
endpoint](/nomad/api-docs/services#read-service) to fetch details for a specific
service. This example retrieves information about the `countdash-web` service.

```shell-script
curl --location 'http://<nomad-http-address>:<port>/v1/service/countdash-web' \>
     --header 'X-Consul-Token: <nomad-management-token>' 
```

The response's `Address` value is the public IP address.

```json
[
  {
    "Address": "ec2-3-21-113-32.us-east-2.compute.amazonaws.com",
    "AllocID": "b1d44744-1592-4241-e904-6a4654a40898",
    "CreateIndex": 849,
    "Datacenter": "dc1",
    "ID": "_nomad-task-b1d44744-1592-4241-e904-6a4654a40898-group-countdash-web-countdash-web-countdash-web",
    "JobID": "countdash",
    "ModifyIndex": 849,
    "Namespace": "default",
    "NodeID": "b348d8ac-1020-1b9a-fbb8-0d4a9dbeb5ca",
    "Port": 9002,
    "ServiceName": "excountdash-web",
    "Tags": []
  }
]
```

</Tab>
<Tab heading="UI" group="nomad-ui">

1. Access the **Jobs** screen.
1. Click the **countdash** job name. The job details screen opens to the **Overview** tab.
1. Click the **Services** tab to review a list of services deployed by the job.
1. Click **countdash-web** to view the public IP address. 

</Tab>
</Tabs>

</Tab>
</Tabs>

## Use service tags

You may specify `service` blocks multiple times with the same name but for
different ports. When you query the service name, the service discovery catalog
returns all instances of the service. To restrict results, you may assign [`tags`](/nomad/docs/job-specification/service#tags) to services to group them. 

This example exposes an application on two ports for different protocols.

```hcl
job "..." {
  # ...
  group "..." {
    network {
      port "http" {}
      port "grpc" {}
    }

    service {
      name = "my-app"
      port = "http"
      tags = ["http"]
      # ...
    }

    service {
      name = "my-app"
      port = "grpc"
      tags = ["grpc"]
      # ...
    }
  }
}
```

By assigning different tags, you may reach the port for each protocol with the
`http.my-app` and `grpc.my-app` service queries.

<Tabs>
<Tab heading="Consul" group="consul">

To query for a service with a specific tag, prepend the tag to the Consul DNS
query format mentioned in the ["Configure access to other services"
section](#configure-access-to-other-services).

```text
<tag>.<service_name>.service.<consul_datacenter>.<consul_domain>
```

For example, `grpc.my-app.service.dc1.consul`.

Refer to Consul's ["Standard lookups" guide][consul-standard-lookup] for more
information. 

</Tab>
<Tab heading="Nomad" group="nomad">

Prepend the tag to the service name. This example uses the `grpc` service tag.

<CodeBlockConfig lineNumbers="true" 
                 filename="example.nomad.hcl"
                 highlight="6" >

```hcl
job "example" {
  group "example-web" {
    task "example-web" {
      template {
        data = <<EOH
{{ range nomadService "grpc.my-app" }}
   URL = "http://{{ .Address }}:{{ .Port }}"
{{ end }}
EOH
        destination = "local/env.txt"
        env         = true
      }
    }
  }
}
```

</CodeBlockConfig>

</Tab>
</Tabs>

### Canary deployment tags

When using [canary](/nomad/docs/job-specification/update#canary-upgrades) or
[blue/green](/nomad/docs/job-specification/update#blue-green-upgrades) upgrades,
you may specify a different set of tags for the canary allocations with the
[`canary_tags` parameter](nomad/docs/job-specification/service#canary_tags)
configuration.

During a deployment, Nomad registers the new allocations with the tags set in
`canary_tags` while non-canaries use the values in `tags`. Having different sets
of tags lets you create separate load balancing routing rules to preview
canaries. Refer to the ["Load balancer deployment considerations"
guide](/nomad/docs/networking/load-balancer) for more information.

Nomad registers services with either `tags` or `canary_tags`, but you must set
them in both fields in order to share values.

## Countdash job specs

The Countdash application jobspec deploys a job called "countdash" to a Nomad
cluster running on AWS. You may review the frontend and backend service code in
the [HashiCorp `demo-consul-101`
repository](https://github.com/hashicorp/demo-consul-101/blob/main/services/README.md).

The web application runs on port 9002, so make sure to open that port in your
AWS security group.

If you want to run the job on infrastructure other than AWS, you should update
each group's `service.address` parameter value to
`attr.unique.network.ip-address` or similar. Refer to the [`service` block's
`address` parameter reference](/nomad/docs/job-specification/service#address)
for more information.

<Tabs>
<Tab heading="Consul service discovery" group="consul">

<CodeBlockConfig lineNumbers="true" 
                 filename="countdash.nomad.hcl">

```hcl
variable "countdash-api-port" {
  description = "Countdash API Port"
  default = 9001
}
variable "countdash-web-port" {
  description = "Countdash web port"
  default = 9002
}

job "countdash" {

  group "countdash-api" {
    count = 1

    network {
      port "countdash-api" {
        static = var.countdash-api-port
      }
      dns {
      	servers = ["172.17.0.1"] 
      }
    }

    service {
      name = "countdash-api"
      provider = "consul"
      port = "countdash-api"      
      address  = attr.unique.platform.aws.local-ipv4

      check {
        name     = "Countdash API ready" 
        type     = "http"
        path     = "/actuator/health"
        interval  = "5s"
				timeout   = "5s"

        check_restart {
          limit = 0
        }
      }      
    }

    task "countdash-api" {
      driver = "docker"

      meta {
        service = "countdash-api"
      }

      config {
        image = "hashicorpdev/counter-api:v3"
        ports = ["countdash-api"]
       mount {
          type   = "bind"
          source = "local/application.properties"
          target = "/application.properties"
        }
      }
      template {
        data = "server.port=${var.countdash-api-port}"
        destination = "local/application.properties"
      }
      resources {
        memory = 500
      }
    }
  }

  group "countdash-web" {

    count = 1

    network {
      port "countdash-web" {
        static = var.countdash-web-port
      }
      dns {
      	servers = ["172.17.0.1"] 
      }
    }

    service {
      name = "countdash-web"
      provider = "consul"
      port = "countdash-web"
      address  = attr.unique.platform.aws.public-hostname
      check {
        name      = "Countdash web ready"
        type      = "http"
        path			= "/"
        interval  = "5s"
        timeout   = "5s"
      }
    }

    task "countdash-web" {
      driver = "docker"

      meta {
        service = "countdash-web"
      }
      env {
        COUNTING_SERVICE_URL = "http://countdash-api.service.dc1.consul:${var.countdash-api-port}"
        PORT="${var.countdash-web-port}"
      }

      config {
        image          = "hashicorpdev/counter-dashboard:v3"
        auth_soft_fail = true
        ports = ["countdash-web"]
      }
    }
  }
}
```

</CodeBlockConfig>

</Tab>
<Tab heading="Nomad service discovery" group="nomad">

<CodeBlockConfig lineNumbers="true" 
                 filename="countdash.nomad.hcl">

```hcl
variable "countdash-api-port" {
  description = "Countdash API Port"
  default = 9001
}
variable "countdash-web-port" {
  description = "Countdash web port"
  default = 9002
}

job "countdash" {

  group "countdash-api" {
    count = 1

    network {
      port "countdash-api" {
        static = var.countdash-api-port
      }
    }

    service {
      name = "countdash-api"
      provider = "nomad"
      port = "countdash-api"      
      address  = attr.unique.platform.aws.local-ipv4

      check {
        name      = "Countdash API ready" 
        type      = "http"
        path      = "/actuator/health"
        interval  = "5s"
        timeout   = "5s"

        check_restart {
          limit = 0
        }
      }          
     }    

    task "countdash-api" {
      driver = "docker"      

      meta {
        service = "countdash-api"
      }

      config {
        image = "hashicorpdev/counter-api:v3"
        ports = ["countdash-api"]
        mount {
          type   = "bind"
          source = "local/application.properties"
          target = "/application.properties"
        }
      }
      template {
        data = "server.port=${var.countdash-api-port}"
        destination = "local/application.properties"
      }
      resources {
        memory = 500
      }
    }
  }

  group "countdash-web" {

    count = 1

    network {
      port "countdash-web" {
        static = var.countdash-web-port
      }
    }

    service {
      name = "countdash-web"
      provider = "nomad"
      port = "countdash-web"
      address  = attr.unique.platform.aws.public-hostname

      check {
        name      = "Countdash web ready"
        type      = "http"
        path      = "/"
        interval  = "5s"
        timeout   = "5s"
      }
    }

    task "countdash-web" {
      driver = "docker"

      meta {
        service = "countdash-web"
      }
      env {
        PORT="${var.countdash-web-port}"
      }

      config {
        image          = "hashicorpdev/counter-dashboard:v3"
        auth_soft_fail = true
        ports = ["countdash-web"]
      }

      template {
        data = <<EOH
        BIND_ADDRESS = ":${var.countdash-api-port}"
{{ range nomadService "countdash-api" }}
COUNTING_SERVICE_URL = "http://{{ .Address }}:{{ .Port }}"
{{ end }}
EOH
        destination = "local/env.txt"
        env         = true
      }
    }
  }
}
```

</CodeBlockConfig>

</Tab>
</Tabs>


[service-provider]: /nomad/docs/job-specification/service#provider
[service-check]: /nomad/docs/job-specification/check
[consul-standard-lookup]: /consul/docs/discover/service/static#standard-lookups